<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/selectAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_a_new_avatar"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:translationX="100dp"
            android:translationY="50dp" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="3"
            android:translationY="50dp"
            tools:rowCount="2">

            <ImageView
                android:id="@+id/logoImage01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnSpan="1"
                android:contentDescription="@string/avatar1"
                android:onClick="SetTeamIcon"
                app:srcCompat="@drawable/ic_logo_01"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageView
                android:id="@+id/logoImage02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnSpan="1"
                android:contentDescription="@string/avatar2"
                android:onClick="SetTeamIcon"
                app:srcCompat="@drawable/ic_logo_03"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageView
                android:id="@+id/logoImage03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnSpan="1"
                android:contentDescription="@string/avatar3"
                android:onClick="SetTeamIcon"
                app:srcCompat="@drawable/ic_logo_02"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageView
                android:id="@+id/logoImage04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnSpan="1"
                android:contentDescription="@string/avatar4"
                android:onClick="SetTeamIcon"
                app:srcCompat="@drawable/ic_logo_05"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageView
                android:id="@+id/logoImage05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnSpan="1"
                android:contentDescription="@string/avatar5"
                android:onClick="SetTeamIcon"
                app:srcCompat="@drawable/ic_logo_04"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageView
                android:id="@+id/logoImage00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnSpan="1"
                android:contentDescription="@string/avatar0"
                android:onClick="SetTeamIcon"
                app:srcCompat="@drawable/ic_logo_00"
                tools:ignore="RedundantDescriptionCheck" />

        </GridLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOAD FROM PHONE"
            android:textColor="#161617"
            android:translationX="110dp"
            android:translationY="100dp"
            app:backgroundTint="#AA9A9A"
            app:iconTint="#756666" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>