<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/MainLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/defaultImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/selectTeam"
            android:onClick="OnSetAvatarButton"
            android:translationX="140dp"
            app:srcCompat="@drawable/ic_logo_00" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:translationX="100dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/enterTeam"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="(Please enter a team name)"
                android:inputType="textPersonName"
                android:textColorHint="#00838F"
                android:translationX="50dp" />

            <TextView
                android:id="@+id/teamNameTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamName"
                android:translationX="140dp" />
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/teamAddressField"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="(Please enter un ZIP code)"
                android:inputType="textPersonName"
                android:textColorHint="#00838F"
                android:translationX="50dp" />

            <TextView
                android:id="@+id/teamAddressTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addressTeam"
                android:translationX="140dp" />

        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnOpenInGoogleMaps"
            android:text="@string/buttonMap"
            android:translationX="90dp"
            app:backgroundTint="#675D5D"
            app:iconTint="#BA8D8D"
            tools:layout_editor_absoluteY="505dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>